tests/neg/fun-ascription.check
-- [E081] Type Error: tests/neg/fun-ascription.scala:2:13 --------------------------------------------------------------
2 |val x1 = (f: Int => Int)  // error
  |             ^^^
  |             Missing parameter type
  |
  |             I could not infer the type of the parameter Int.
-- [E081] Type Error: tests/neg/fun-ascription.scala:3:12 --------------------------------------------------------------
3 |val x2 = f: Int => Int    // error
  |            ^^^
  |            Missing parameter type
  |
  |            I could not infer the type of the parameter Int.
